feat: add hot topics
